fix desktopp hero

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,10 @@
 <section class="hero">
-  <div class="hero__container container">
+  <div class="hero__container">
     <h2 class="hero__title">OKSI</h2>
     <h3 class="hero__subtitle">САЛОН КРАСИ</h3>
     <p class="hero__text">
-      ОТРИМАЙТЕ СВОЮ ЗНИЖКУ <span class="hero__text-accent">30%</span> НА ПЕРШУ СТРИЖКУ В НАШОМУ
-      САЛОНІ
+      ОТРИМАЙТЕ СВОЮ ЗНИЖКУ <span class="hero__text-accent">30%</span> НА <br />
+      ПЕРШУ СТРИЖКУ В НАШОМУ САЛОНІ
     </p>
     <div class="buttonWraper">
       <button type="button" class="hero__button button">ЗАПИСАТИСЬ</button>
