--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -129,6 +129,7 @@
   font-weight: 500;
   line-height: 1;
   font-variant: all-small-caps;
+  text-transform: lowercase;
 
   font-variation-settings: 'opsz' 8;
 
