--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
             Адреса<br />
           <hr />
             м.Хмельницький<br />
-            вул.Проспект миру 274
+            вул.Проспект миру 63
           </p>
         </div>
         <div class="footerContactsDesktop__schedule">
@@ -23,7 +23,7 @@
           >
         </div>
 
-                <div class="footerContactsDesktop__instagram">
+        <div class="footerContactsDesktop__instagram">
 
           <a
             target="_blank"
@@ -38,16 +38,15 @@
         </div>
 
       </div>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1297.1596755846635!2d26.997506773336717!3d49.44068089712295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473207089d02e385%3A0x3f63d801b8e678ac!2z0L_RgNC-0YHQv9C10LrRgiDQnNC40YDRgywgMjc0LCDQpdC80LXQu9GM0L3QuNGG0YzQutC40LksINCl0LzQtdC70YzQvdC40YbRjNC60LAg0L7QsdC70LDRgdGC0YwsIDI5MDAw!5e0!3m2!1suk!2sua!4v1686590629010!5m2!1suk!2sua"
-        width="508px"
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d618.5723917994886!2d26.997248707523635!3d49.4412734842596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47320708a4ba2dbd%3A0xa1c00a90488c81b1!2z0JDQstGC0L7RiNC60L7Qu9CwINCl0LzQtdC70YzQvdC40YbRjNC60LAg0J7QotCoINCi0KHQntCj!5e1!3m2!1suk!2sua!4v1697095239377!5m2!1suk!2sua"
+           width="508px"
         height="220px"
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
-        class="footer__map"
-      ></iframe>
+        class="footer__map"></iframe>
     </div>
     <div class="footerContacts">
       <ul class="footerContacts__list list">
@@ -69,10 +68,10 @@
           </svg>
           <a
             target="_blank"
-            href=" https://goo.gl/maps/S2Z7EqK3KxJQxx17A"
+            href="https://maps.app.goo.gl/dvnb2iWV6NYwjmpG9"
             class="footerContacts__link link"
-            >вул.Проспект миру 724</a
-          >
+            >вул.Проспект миру 63
+          </a>
         </li>
         <li class="footerContacts__item">
           <svg class="footerContacts__icon" width="15px" height="15px">
@@ -86,16 +85,14 @@
           >
         </li>
       </ul>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1297.1596755846635!2d26.997506773336717!3d49.44068089712295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473207089d02e385%3A0x3f63d801b8e678ac!2z0L_RgNC-0YHQv9C10LrRgiDQnNC40YDRgywgMjc0LCDQpdC80LXQu9GM0L3QuNGG0YzQutC40LksINCl0LzQtdC70YzQvdC40YbRjNC60LAg0L7QsdC70LDRgdGC0YwsIDI5MDAw!5e0!3m2!1suk!2sua!4v1686590629010!5m2!1suk!2sua"
-        width="75%"
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d618.5723917994886!2d26.997248707523635!3d49.4412734842596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47320708a4ba2dbd%3A0xa1c00a90488c81b1!2z0JDQstGC0L7RiNC60L7Qu9CwINCl0LzQtdC70YzQvdC40YbRjNC60LAg0J7QotCoINCi0KHQntCj!5e1!3m2!1suk!2sua!4v1697125784594!5m2!1suk!2sua"
+         width="75%"
         height="auto"
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
-        class="footer__map"
-      ></iframe>
+        class="footer__map"></iframe>
       <p class="footer__text">м.Хмельницький</p>
     </div>
     <div class="footerNav">
