--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -79,16 +79,16 @@
 
   @include tablet {
     font-size: 183px;
-    font-weight: 700;
-    line-height: 1;
+    // font-weight: 700;
+    // line-height: 1;
     letter-spacing: 9px;
   }
   @include desktop {
     width: calc(50% - 100px);
 
     font-size: 131px;
-    font-weight: 700;
-    line-height: 1;
+    // font-weight: 700;
+    // line-height: 1;
     letter-spacing: 6.4px;
   }
 }
@@ -105,18 +105,18 @@
   @include tablet {
     margin-bottom: 10px;
     font-size: 51px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1;
+    // font-style: normal;
+    // font-weight: 700;
+    // line-height: 1;
   }
   @include desktop {
     margin-bottom: 15px;
     width: calc(50% - 100px);
 
     font-size: 53px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1;
+    // font-style: normal;
+    // font-weight: 700;
+    // line-height: 1;
   }
 }
 
@@ -128,29 +128,28 @@
   font-style: normal;
   font-weight: 500;
   line-height: 1;
-  font-variant: all-small-caps;
+  font-variant-caps: all-small-caps;
   text-transform: lowercase;
 
   font-variation-settings: 'opsz' 8;
 
   @include tablet {
-    font-family: 'Source Serif 4';
     font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1;
-    font-variant: all-small-caps;
+    // font-family: 'Source Serif 4';
+    // font-style: normal;
+    // font-weight: 500;
+    // line-height: 1;
+    // font-variant: all-small-caps;
   }
   @include desktop {
     width: calc(50% - 100px);
-
-    color: #222;
-    font-family: 'Source Serif 4';
     font-size: 27px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1;
-    font-variant: all-small-caps;
+    // color: #222;
+    // font-family: 'Source Serif 4';
+    // font-style: normal;
+    // font-weight: 500;
+    // line-height: 1;
+    // font-variant: all-small-caps;
   }
 }
 .hero__text-accent {
@@ -160,26 +159,26 @@
   font-style: normal;
   font-weight: 700;
   line-height: 1;
-  font-variant: all-small-caps;
+  font-variant-caps: all-small-caps;
   font-variation-settings: 'opsz' 8;
 
   @include tablet {
     color: $highlightedTextColor;
-    font-family: 'Source Serif 4';
     font-size: 33px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1;
-    font-variant: all-small-caps;
+    // font-family: 'Source Serif 4';
+    // font-style: normal;
+    // font-weight: 700;
+    // line-height: 1;
+    // font-variant: all-small-caps;
   }
   @include desktop {
     color: $highlightedTextColor;
-    font-family: 'Source Serif 4';
     font-size: 43px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1;
-    font-variant: all-small-caps;
+    // font-family: 'Source Serif 4';
+    // font-style: normal;
+    // font-weight: 700;
+    // line-height: 1;
+    // font-variant: all-small-caps;
   }
 }
 
